--- a/todo-server/package.json
+++ b/todo-server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^8.8.1",
     "swagger-autogen": "^2.22.0",
