--- a/todo-app/app.json
+++ b/todo-app/app.json
@@ -3,13 +3,25 @@
     "name": "todo-app",
     "slug": "todo-app",
     "version": "1.0.0",
+    "icon": "./assets/icon.png",
     "assetBundlePatterns": [
       "**/*"
     ],
+    "splash": {
+      "image": "./assets/icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "extra": {
       "eas": {
         "projectId": "ce7b5a3f-41ee-40fe-a8fe-cf6c8f23bf1d"
       }
+    },
+    "android": {
+        "adaptiveIcon": {
+          "foregroundImage": "./assets/icon.png",
+          "backgroundColor": "#FFFFFF"
+        }
     }
   }
 }
